--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -10,7 +10,7 @@
     "| Contributors | E-Mail |\n",
     "|--------------|--------------|\n",
     "| @AlicemSu62  | |\n",
-    "| @AnnaValentinaHirsch  | |\n",
+    "| @AnnaValentinaHirsch  | a-valentina.hirsch@hotmail.com |\n",
     "| @nadja-macht | nadja.macht@gmail.com |\n",
     "| @pierremayer94  | |\n",
     "| @YannickKae | |\n",
