--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Flash Card Project \n",
-    "This project was created in the context of course \"Python Programming: Beginner to Practitioner\".\n",
+    "This project is part of the Python Programming course offered by OpenCampus Kiel, Germany, and aims to assist participants from various backgrounds in learning web development. It is a collaborative effort by a group of students who are working together to create a Flash Card Tool that can be used to study various topics.\n",
     "\n",
     "| Contributors | E-Mail |\n",
     "|--------------|--------------|\n",
@@ -23,9 +23,9 @@
    "source": [
     "# Introduction - Task Understanding\n",
     "\n",
-    "Our objective for this project was to develop a Flash Card Tool designed to aid in learning various topics. The program should enable users to create, save, and manage their card sets and individual cards. Additionally, it should support users in studying the content of the cards. The tool should incorporate a scoring system to track user success and employ randomization to enhance the learning process.\n",
+    "The main goal of this project is to create a flash card tool specifically designed to assist in the acquisition of knowledge on different subjects. The application provides users with a range of features, such as the creation, storage, and management of learning cards. Furthermore, it seeks to enhance comprehension of the educational material through gamification, as the application also has a scoring system to monitor user progress. \n",
     "\n",
-    "The project setup is modularized. This notebooks purpose is to document our approach, relevant parts of the code and the choices we made to get the project done.   Some Markdown text with <span style=\"color:Tomato\">**_[It does not contain the entire code.]_**</span>.\n",
+    "The project setup is organised into modules. The objective of this specific notebook is to chronicle our strategy, key components of the code, and the decisions we made to complete the project.  Some Markdown text with <span style=\"\">**_[It does not contain the entire code.]_**</span>.  Some Markdown text with <span style=\"color:Tomato\">**_[It does not contain the entire code.]_**</span>.\n",
     "\n",
     "---"
    ]
@@ -36,7 +36,7 @@
    "source": [
     "# Thinking Process\n",
     "\n",
-    "We started out by visualizing and thinking through the functionality of the application. While this process helped to align our expectations and determine the requirements for the app, we expereinced that talking and visualizing would only bring us thus far. In order to make progress we had to start coding.\n",
+    "We started out by visualizing and thinking through the functionality of the application. While this process helped us align our expectations and work out a comprehensive requirements list, we quickly realised that in order to make progresd, we need to start prototyping at a very early stage. \n",
     "\n",
     "### General assumptions and specifications\n",
     "* Keep it simple and the scope small to make sure we get the project done.\n",
