TODO: translate flowchart

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -50,6 +50,7 @@
     "### Early decisions \n",
     "* Work with GitHub\n",
     "* Modularize, *.py files\n",
+    "* Use tkinter for GUI\n",
     "\n",
     "### Flow Chart FlashCard App\n",
     "\n",
