Added Emails Added Classes and Methods Section to documentation

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "| Contributors | E-Mail |\n",
     "|--------------|--------------|\n",
-    "| @AlicemSu62  | |\n",
+    "| @AlicemSu62  | stu220340@mail.uni-kiel.de|\n",
     "| @AnnaValentinaHirsch  | a-valentina.hirsch@hotmail.com |\n",
     "| @nadja-macht | nadja.macht@gmail.com |\n",
-    "| @pierremayer94  | |\n",
-    "| @YannickKae | |\n",
+    "| @pierremayer94  | pierremayer94@gmail.com |\n",
+    "| @YannickKae | yannick.kaelber@gmail.com|\n",
     "\n"
    ]
   },
@@ -34,9 +34,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Thinking Process\n",
+    "## Thought Process\n",
     "\n",
-    "We started out by visualizing and thinking through the functionality of the application. While this process helped us align our expectations and work out a comprehensive requirements list, we quickly realised that in order to make progresd, we need to start prototyping at a very early stage. \n",
+    "We started out by visualizing and thinking through the functionality of the application. While this process helped us align our expectations and work out a comprehensive requirements list, we quickly realised that in order to make progress, we need to start prototyping at a very early stage. \n",
     "\n",
     "### General assumptions and specifications\n",
     "* Keep it simple and the scope small to make sure we get the project done.\n",
@@ -103,6 +103,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Classes and Methods\n",
+    "\n",
+    "## class FlashCard:\n",
+    "**Description**: Represents a single flashcard with a front (question) and back (answer).\n",
+    "Aditionally the Number of times the card has been reviewed and answered correctly is counted in order to create statistics.\n",
+    "\n",
+    "**Attributes**:\n",
+    "- `front` (str): The front text of the flashcard.\n",
+    "- `back` (str): The back text of the flashcard.\n",
+    "- `review_count` (int): Number of times the card has been reviewed.\n",
+    "- `correct_count` (int): Number of times the card has been answered correctly.\n",
+    "\n",
+    "**Methods**:\n",
+    "- `mark_correct()`: Marks the flashcard as answered correctly.\n",
+    "- `mark_incorrect()`: Marks the flashcard as answered incorrectly.\n",
+    "- `success_rate()`: Calculates and returns the success rate of the flashcard as a percentage.\n",
+    "\n",
+    "## class FlashCardSet:\n",
+    "**Description**: Represents a set of flashcards. Contains the functionality to manipulate cards and keep the statistics.\n",
+    "\n",
+    "**Attributes**:\n",
+    "- `title` (str): The title of the flashcard set.\n",
+    "- `cards` (list): List of FlashCard objects in the set.\n",
+    "\n",
+    "**Methods**:\n",
+    "- `add_card(front, back)`: Adds a flashcard to the set.\n",
+    "- `edit_card(index, new_front, new_back)`: Edits a flashcard in the set.\n",
+    "- `delete_card(index)`: Deletes a flashcard from the set.\n",
+    "- `to_dict()`: Converts the flashcard set to a dictionary.\n",
+    "- `from_dict(cls, data)`: Creates a FlashCardSet object from a dictionary.\n",
+    "- `total_score()`: Calculates the total score of the flashcard set.\n",
+    "- `success_rate()`: Calculates and returns the success rate of the flashcard set as a percentage.\n",
+    "\n",
+    "## class FlashcardGUI:\n",
+    "\n",
+    "**Description**: Represents the graphical user interface of the flashcard application.\n",
+    "\n",
+    "### Attributes\n",
+    "\n",
+    "#### Main Components\n",
+    "- `root` (tk.Tk): The root Tkinter window.\n",
+    "- `main_frame` (ctk.CTkFrame): Main frame of the GUI.\n",
+    "\n",
+    "#### Flashcard Management\n",
+    "- `flashcard_sets` (list): List of FlashCardSet objects.\n",
+    "- `current_set` (FlashCardSet): Currently selected flashcard set.\n",
+    "- `current_card_index` (int): Index of the current flashcard being viewed.\n",
+    "\n",
+    "#### User Input Fields\n",
+    "- `new_deck_title_entry` (ctk.CTkEntry): Entry widget for new deck title.\n",
+    "- `card_question_entry` (ctk.CTkEntry): Entry widget for flashcard question.\n",
+    "- `card_answer_entry` (ctk.CTkEntry): Entry widget for flashcard answer.\n",
+    "- `user_answer_entry` (ctk.CTkEntry): Entry widget for user answer during review.\n",
+    "- `edit_card_question_entry` (ctk.CTkEntry): Entry widget for editing flashcard question.\n",
+    "- `edit_card_answer_entry` (ctk.CTkEntry): Entry widget for editing flashcard answer.\n",
+    "\n",
+    "#### Display Elements\n",
+    "- `answer_message_label` (ctk.CTkLabel): Label for displaying answer messages.\n",
+    "\n",
+    "### Methods\n",
+    "\n",
+    "#### Initialization and UI Setup\n",
+    "- `init_ui()`: Initializes the user interface.\n",
+    "- `create_main_frame()`: Creates the main frame of the GUI.\n",
+    "\n",
+    "#### Deck Management\n",
+    "- `show_deck_manager()`: Displays the deck manager screen.\n",
+    "- `create_deck_card(parent, deck, index)`: Creates a visual representation of a flashcard deck.\n",
+    "- `show_new_deck_input()`: Displays the input screen for creating a new deck.\n",
+    "- `create_new_set_from_input()`: Creates a new flashcard set from user input.\n",
+    "- `show_add_cards_input()`: Displays the input screen for adding cards to a deck.\n",
+    "- `add_card_from_input()`: Adds a new flashcard to the current set from user input.\n",
+    "- `delete_current_deck()`: Deletes the current flashcard deck.\n",
+    "\n",
+    "#### Learning Session\n",
+    "- `start_learning(set_index)`: Starts the learning session for the selected flashcard set.\n",
+    "- `show_flashcard()`: Displays the current flashcard for learning.\n",
+    "- `check_answer(user_answer)`: Checks the user's answer against the flashcard's answer.\n",
+    "- `show_answer(answer_label)`: Displays the correct answer for the current flashcard.\n",
+    "- `prev_card()`: Shows the previous flashcard in the set.\n",
+    "- `next_card()`: Shows the next flashcard in the set.\n",
+    "\n",
+    "#### Editing Flashcards\n",
+    "- `edit_set(set_index)`: Displays the edit screen for the selected flashcard set.\n",
+    "- `show_edit_screen()`: Displays the edit screen for the current flashcard set.\n",
+    "- `show_edit_card_input(card_index)`: Displays the input screen for editing a flashcard.\n",
+    "- `save_card_edit(card_index)`: Saves the edited flashcard.\n",
+    "- `delete_card(card_index)`: Deletes a flashcard from the current set.\n",
+    "\n",
+    "#### Export/Import\n",
+    "- `export_flashcard_sets()`: Exports the flashcard sets to a JSON file.\n",
+    "- `import_flashcard_sets()`: Imports flashcard sets from a JSON file.\n",
+    "\n",
+    "#### Statistics\n",
+    "- `show_statistics()`: Displays the overall statistics of the flashcard sets.\n",
+    "- `show_individual_statistics(set_index)`: Displays the statistics for an individual flashcard set.\n",
+    "\n",
+    "#### Other Functionalities\n",
+    "- `on_closing()`: Handles the closing event of the application.\n",
+    "- `show_help_screen()`: Displays the help screen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# GUI // gui.py\n",
     "\n",
     "Add important notes on the GUI"
@@ -136,7 +242,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Important Learnings\n",
+    "# Final Thoughts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Important Learnings\n",
     "\n",
     "* Group coordination improved when we decided check-ins and deliverables in advance.\n",
     "* We didn't do the best job at splitting up the work. \n",
@@ -147,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What Could Be Improved\n",
+    "## What Could Be Improved\n",
     "\n",
     "**Open issues and next steps to improve the current application:**\n",
     "\n",
