Added Screenshots to the documentation

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -209,9 +209,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GUI // gui.py\n",
+    "# GUI Tour\n",
     "\n",
-    "Add important notes on the GUI"
+    "## Main Window\n",
+    "<img src=\"images/00_main.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Create New Deck\n",
+    "<img src=\"images/01_new_deck.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Add Card\n",
+    "<img src=\"images/02_add_card.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Main Window with Content\n",
+    "<img src=\"images/03_main_decks.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Study\n",
+    "<img src=\"images/04_study.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Edit Set\n",
+    "<img src=\"images/05_edit_set.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Edit Card\n",
+    "<img src=\"images/06_edit_card.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Delete Card\n",
+    "<img src=\"images/07_delete card.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Statistics for a Set\n",
+    "<img src=\"images/08_stat_set.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "## Overall Statistics\n",
+    "<img src=\"images/09_stat_overall.png\" width=\"200\" height=\"\">\n"
    ]
   },
   {
