minor headings updated

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classes and Methods\n",
+    "# Class Attributes and Methods\n",
     "\n",
     "## class FlashCard:\n",
     "**Description**: Represents a single flashcard with a front (question) and back (answer).\n",
