--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -28,13 +28,13 @@
     "This project is part of the Python Programming course offered by OpenCampus Kiel, Germany, and aims to assist participants from various backgrounds in learning web development. It is a collaborative effort by a group of students who are working together to create a Flash Card Tool that can be used to study various topics.\n",
     "\n",
     "\n",
-    "| Contributors | E-Mail |\n",
-    "|--------------|--------------|\n",
-    "| @AlicemSu62  | |\n",
-    "| @AnnaValentinaHirsch  | a-valentina.hirsch@hotmail.com |\n",
-    "| @nadja-macht | nadja.macht@gmail.com |\n",
-    "| @pierremayer94  | |\n",
-    "| @YannickKae | |\n",
+    "| Contributor           | GitHub Username      | E-Mail                         | Main Contributions                                \n",
+    "|-----------------------|----------------------|--------------------------------|---------------------------------------------------|\n",
+    "| Alicem Susam          | @AlicemSu62          | stu220340@mail.uni-kiel.de     | JSON Integration, File Operations                 |\n",
+    "| Anna-Valentina Hirsch | @AnnaValentinaHirsch | a-valentina.hirsch@hotmail.com | App Structure, Flashcard Management, Deck Manager |\n",
+    "| Nadja Macht           | @nadja-macht         | nadja.macht@gmail.com          | GUI, Help Screen, Documentation                   |\n",
+    "| Pierre Mayer          | @pierremayer94       | pierremayer94@gmail.com        | Scoring System, File Upload Download Integration  | \n",
+    "| Yannick Kälber        |  @YannickKae         | yannick.kaelber@gmail.com      | GUI Design, Flashcard Management                  |\n",
     "\n"
    ]
   },
