--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -28,13 +28,13 @@
     "This project is part of the Python Programming course offered by OpenCampus Kiel, Germany, and aims to assist participants from various backgrounds in learning web development. It is a collaborative effort by a group of students who are working together to create a Flash Card Tool that can be used to study various topics.\n",
     "\n",
     "\n",
-    "| Contributor           | GitHub Username      | E-Mail                         | Main Contributions                            \n",
-    "|-----------------------|----------------------|--------------------------------|-----------------------------------------------|\n",
-    "| Alicem Susam          | @AlicemSu62          | stu220340@mail.uni-kiel.de     | JSON Integration, File Operations             |\n",
-    "| Anna-Valentina Hirsch | @AnnaValentinaHirsch | a-valentina.hirsch@hotmail.com | App Structure, Learning Session, Deck Manager |\n",
-    "| Nadja Macht           | @nadja-macht         | nadja.macht@gmail.com          | GUI, Help Screen, Documentation               |\n",
-    "| Pierre Mayer          | @pierremayer94       | pierremayer94@gmail.com        | Scoring System, Documentation                 | \n",
-    "| Yannick Kälber        |  @YannickKae         | yannick.kaelber@gmail.com      | GUI Design, Flashcard Management              |\n",
+    "| Contributor           | GitHub Username      | E-Mail                         | Main Contributions                                |\n",
+    "|-----------------------|----------------------|--------------------------------|---------------------------------------------------|\n",
+    "| Alicem Susam          | @AlicemSu62          | stu220340@mail.uni-kiel.de     | JSON Integration, File Operations, Testing        |\n",
+    "| Anna-Valentina Hirsch | @AnnaValentinaHirsch | a-valentina.hirsch@hotmail.com | Learning Session, Flashcard Manager, Deck Manager |\n",
+    "| Nadja Macht           | @nadja-macht         | nadja.macht@gmail.com          | GUI, Help Screen, Documentation                   |\n",
+    "| Pierre Mayer          | @pierremayer94       | pierremayer94@gmail.com        | GUI Functionality, Scoring System, Documentation  |\n",
+    "| Yannick Kälber        | @YannickKae          | yannick.kaelber@gmail.com      | GUI Design, Testing, Flashcard Management         |\n",
     "\n"
    ]
   },
@@ -298,6 +298,7 @@
     "\n",
     "## 6.2. Known Issues\n",
     "\n",
+    "- Scrolling with the mouse wheel is not working properly in the GUI.\n",
     "- The statistics are not saved after closing the UI.\n",
     "- The UI is not responsive and may not display correctly on all screen sizes.\n",
     "\n",
