updated documentation to include     - class attributes and methods     - UI images

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -16,13 +16,15 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "<a href=\"https://colab.research.google.com/github/AnnaValentinaHirsch/FlashcardApp/blob/main/documentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/AnnaValentinaHirsch/FlashcardApp/blob/main/documentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Flash Card Project\n",
     "This project is part of the Python Programming course offered by OpenCampus Kiel, Germany, and aims to assist participants from various backgrounds in learning web development. It is a collaborative effort by a group of students who are working together to create a Flash Card Tool that can be used to study various topics.\n",
@@ -39,8 +41,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 1. Introduction - Task Understanding\n",
     "\n",
@@ -51,8 +53,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1.1. Thinking Process\n",
     "\n",
@@ -120,6 +122,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "3OJxwjqzXJaU"
+   },
    "source": [
     "# 3. App Structure\n",
     "\n",
@@ -139,46 +144,206 @@
     "\n",
     "## 3.2. Data Structures\n",
     "\n",
-    "#### **Flashcard**\n",
+    "#### **Flashcard Class // flashcard.py**\n",
     "\n",
-    "| Attribute      | Description            |\n",
-    "|----------------|------------------------|\n",
-    "| front          | Question               |\n",
-    "| back           | Answer                 |\n",
-    "| review_count   | Number of reviews      |\n",
-    "| correct_count  | Number of correct answers |\n",
+    "**Description**: Represents a single flashcard with a front (question) and back (answer).\n",
+    "Aditionally the Number of times the card has been reviewed and answered correctly is counted in order to create statistics.\n",
     "\n",
-    "<br>\n",
+    "**Attributes**:\n",
+    "- `front` (str): The front text of the flashcard.\n",
+    "- `back` (str): The back text of the flashcard.\n",
+    "- `review_count` (int): Number of times the card has been reviewed.\n",
+    "- `correct_count` (int): Number of times the card has been answered correctly.\n",
     "\n",
-    "#### **FlashcardSet**\n",
-    "\n",
-    "| Attribute      | Description              |\n",
-    "|----------------|--------------------------|\n",
-    "| title          | Deck title               |\n",
-    "| cards          | List of Flashcard objects|\n",
+    "**Methods**:\n",
+    "- `mark_correct()`: Marks the flashcard as answered correctly.\n",
+    "- `mark_incorrect()`: Marks the flashcard as answered incorrectly.\n",
+    "- `success_rate()`: Calculates and returns the success rate of the flashcard as a percentage.\n",
     "\n",
     "<br>\n",
     "\n",
-    "#### **File Management**\n",
+    "#### **FlashcardSet Class // flashcard_set.py**\n",
     "\n",
+    "**Description**: Represents a set of flashcards. Contains the functionality to manipulate cards and keep the statistics.\n",
+    "\n",
+    "**Attributes**:\n",
+    "- `title` (str): The title of the flashcard set.\n",
+    "- `cards` (list): List of FlashCard objects in the set.\n",
+    "\n",
+    "**Methods**:\n",
+    "- `add_card(front, back)`: Adds a flashcard to the set.\n",
+    "- `edit_card(index, new_front, new_back)`: Edits a flashcard in the set.\n",
+    "- `delete_card(index)`: Deletes a flashcard from the set.\n",
+    "- `to_dict()`: Converts the flashcard set to a dictionary.\n",
+    "- `from_dict(cls, data)`: Creates a FlashCardSet object from a dictionary.\n",
+    "- `total_score()`: Calculates the total score of the flashcard set.\n",
+    "- `success_rate()`: Calculates and returns the success rate of the flashcard set as a percentage.\n",
+    "<br>\n",
+    "\n",
+    "#### **FileOperations Class // file_operations.py**\n",
+    "**Description**:\n",
+    "- Handles importing and exporting of flashcard sets.\n",
     "- Deck data is saved in JSON format\n",
     "- Each deck is saved as a separate JSON file in the application directory\n",
     "- Import/export functions use JSON for data interchange\n",
     "\n",
+    "**Attributes**:\n",
+    "\n",
+    "- `app` (object): The main application object.\n",
+    "\n",
+    "**Methods**:\n",
+    "\n",
+    "- `export_flashcard_sets()`: Exports the flashcard sets to a JSON file.\n",
+    "- `import_flashcard_sets()`: Imports flashcard sets from a JSON file.\n",
+    "\n",
     "<br>\n",
     "\n",
-    "#### **Error Handling**\n",
+    "#### **CardEditor Class // card_editor.py**\n",
     "\n",
+    "**Description**: Manages the addition and editing of flashcards within a flashcard set.\n",
+    "\n",
+    "**Attributes**:\n",
+    "\n",
+    "- `app` (object): The main application object.\n",
+    "\n",
+    "**Methods**:\n",
+    "\n",
+    "Card Management\n",
+    "- `show_add_cards_input()`: Displays input fields for adding new cards to the current set.\n",
+    "- `add_card_from_input()`: Adds a card to the current set using input fields.\n",
+    "- `finish_adding_cards()`: Finishes adding cards and returns to the deck manager screen.\n",
+    "\n",
+    "Edit Flashcards\n",
+    "- `edit_set(set_index)`: Sets the current set to the set at the given index and shows the edit screen.\n",
+    "- `show_edit_screen()`: Displays the edit screen for the current set.\n",
+    "- `show_edit_card_input(card_index)`: Displays input fields to edit the card at the given index.\n",
+    "- `save_card_edit(card_index)`: Saves changes made to a card.\n",
+    "- `delete_card(card_index)`: Deletes a card from the current set.\n",
+    "\n",
+    "Deck Management\n",
+    "- `delete_current_deck()`: Deletes the current deck from the app's flashcard_sets list.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### **DeckManager Class // deck_manager.py**\n",
+    "\n",
+    "**Description**: Manages the deck of flashcards, including creating, deleting, and displaying decks.\n",
+    "\n",
+    "**Attributes**\n",
+    "\n",
+    "- `app` (object): The main application object.\n",
+    "- `new_deck_title_entry` (ctk.CTkEntry): Entry widget for new deck title.\n",
+    "\n",
+    "**Methods**\n",
+    "\n",
+    "Deck Management\n",
+    "- `show_deck_manager()`: Displays the deck manager screen showing all user-created or imported decks.\n",
+    "- `create_deck_card(parent, deck, index)`: Creates a card representing a deck.\n",
+    "- `confirm_delete_deck(index)`: Shows a confirmation dialog before deleting a deck.\n",
+    "- `delete_deck(index)`: Deletes a deck from the list of decks.\n",
+    "- `show_new_deck_input()`: Displays an input field for creating a new deck.\n",
+    "- `create_new_set_from_input()`: Creates a new deck based on user input.\n",
+    "\n",
+    "Learning Session\n",
+    "- `start_learning_or_add_cards(set_index)`: Starts a learning session or prompts to add cards if the deck is empty.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### **LearningSession Class // learning_session.py**\n",
+    "\n",
+    "**Description**: Manages the learning session, including reviewing flashcards and checking answers.\n",
+    "\n",
+    "**Attributes**\n",
+    "\n",
+    "- `app` (object): The main application object.\n",
+    "- `current_card_index` (int): Index of the current card being reviewed.\n",
+    "- `cards_to_review` (list): List of cards to be reviewed in the session.\n",
+    "- `reviewed_cards` (int): Number of cards reviewed so far.\n",
+    "\n",
+    "**Methods**\n",
+    "\n",
+    "Session Management\n",
+    "- `start_learning(set_index)`: Starts a learning session with the selected deck.\n",
+    "- `initialize_session()`: Initializes the learning session by shuffling the cards and setting the index to 0.\n",
+    "- `end_learning_session(completed)`: Ends the learning session and shows a message based on completion status.\n",
+    "- `show_empty_deck_message(set_index)`: Shows a message if the deck is empty and provides the option to add cards.\n",
+    "\n",
+    "Flashcard Review\n",
+    "- `show_flashcard()`: Displays the current flashcard to the user.\n",
+    "- `check_answer()`: Checks the user's answer against the correct answer.\n",
+    "- `show_answer()`: Reveals the correct answer if prompted by the user.\n",
+    "- `show_continue_button()`: Displays the continue button after a correct answer.\n",
+    "\n",
+    "Navigation\n",
+    "- `create_navigation_buttons()`: Creates navigation buttons for the learning session.\n",
+    "- `prev_card()`: Displays the previous flashcard.\n",
+    "- `next_card()`: Displays the next flashcard.\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### **Statistics Class // statistics.py**\n",
+    "\n",
+    "**Description**: Manages the display of statistics related to flashcard sets, including total and individual set statistics.\n",
+    "\n",
+    "**Attributes**:\n",
+    "- `app` (object): The main application object.\n",
+    "\n",
+    "**Methods**\n",
+    "- `show_statistics()`: Displays the overall statistics of the flashcard sets.\n",
+    "- `show_individual_statistics(set_index)`: Displays the statistics of a specific flashcard set.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### **FlashcardGUI Class flashcard_gui.py**\n",
+    "\n",
+    "**Description**: Represents the graphical user interface of the flashcard application.\n",
+    "\n",
+    "**Attributes**:\n",
+    "\n",
+    "Main Components\n",
+    "- `root` (tk.Tk): The root Tkinter window.\n",
+    "- `main_frame` (ctk.CTkFrame): Main frame of the GUI.\n",
+    "\n",
+    "Flashcard Management\n",
+    "- `flashcard_sets` (list): List of FlashCardSet objects.\n",
+    "- `current_set` (FlashCardSet): Currently selected flashcard set.\n",
+    "\n",
+    "Utilities\n",
+    "- `message_box` (MessageBox): Message box utility for displaying messages.\n",
+    "- `help_screen` (HelpScreen): Help screen utility.\n",
+    "\n",
+    "**Methods**:\n",
+    "\n",
+    "Initialization and UI Setup\n",
+    "- `init_ui()`: Initializes the user interface.\n",
+    "- `create_main_frame()`: Creates the main frame of the GUI.\n",
+    "\n",
+    "Application Events\n",
+    "- `on_closing()`: Callback triggered when the user tries to close the application.\n",
+    "\n",
+    "Mousewheel Binding\n",
+    "- `bind_mousewheel(widget)`: Binds the mousewheel to the widget.\n",
+    "- `_on_mousewheel(event)`: Allows scrolling with the mouse wheel.\n",
+    "\n",
+    "Help\n",
+    "- `show_help_screen()`: Displays the help screen.\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### **Other Utilities**\n",
+    "- **MessageBox** for displaying different types of message boxes within the application.\n",
     "- **Input Validation** for deck and card creation\n",
     "- **Error Messages** for invalid actions (e.g., studying an empty deck)\n",
     "- **Exception Handling** for file operations"
-   ],
-   "metadata": {
-    "id": "3OJxwjqzXJaU"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "6whHwXeoW3X1"
+   },
    "source": [
     "# 4. Main Features\n",
     "\n",
@@ -191,13 +356,13 @@
     "| **Study Session**   | - Interactive learning with randomized card order <br> - Check answer or reveal correct answer <br> - Track progress within session <br> - End session early or continue until all cards are reviewed  |\n",
     "| **Statistics**      | - View individual deck statistics <br> - Total score <br> - Success rate  |\n",
     "| **Import/Export**   | - Export decks to JSON format <br> - Import decks from JSON files  |\n"
-   ],
-   "metadata": {
-    "id": "6whHwXeoW3X1"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "v6NUXqXLW7dy"
+   },
    "source": [
     "# 5. User Interface\n",
     "\n",
@@ -212,6 +377,8 @@
     "- Access Help\n",
     "- Exit Application\n",
     "\n",
+    "<img src=\"images/00_main.png\" width=\"200\" height=\"\">\n",
+    "\n",
     "### 5.2. Deck Creation and Editing\n",
     "\n",
     "| Action                    | Steps                                                                                                                   |\n",
@@ -219,6 +386,9 @@
     "| **Create new deck:**      | 1. Click \"Create New Deck\" on the main screen<br>2. Enter a title for the deck<br>3. Press Enter or click \"Create Deck\" |\n",
     "| **Edit deck:**   | 1. Click \"Edit\" on the \"your decks\" menu<br>2. Modify card contents, add new cards, or delete existing cards            |\n",
     "| **Delete deck:** | 1. Click \"Delete\" on the \"your decks\" menu<br>2. Confirm Deletion.                                                      |\n",
+    "\n",
+    "#\n",
+    "<img src=\"images/01_new_deck.png\" width=\"200\" height=\"\">\n",
     "\n",
     "\n",
     "### 5.3. Card Creation and Editing\n",
@@ -228,6 +398,8 @@
     "| **Add card:**   | 1. Enter the question in the \"Question\" field<br>2. Press Enter to move to the \"Answer\" field<br>3. Enter the answer<br>4. Press Enter or click \"Add Card\" |\n",
     "| **Edit card:** | 1. In the deck editing view, select the card to edit<br>2. Modify the question or answer as needed<br>3. Save changes |\n",
     "\n",
+    "#\n",
+    "<img src=\"images/02_add_card.png\" width=\"200\" height=\"\">\n",
     "\n",
     "### 5.4. Study Session Interface\n",
     "\n",
@@ -239,6 +411,9 @@
     "- \"Check Answer\" and \"Show Answer\" buttons\n",
     "- Navigation buttons (Previous, Next, End Session)\n",
     "\n",
+    "#\n",
+    "<img src=\"images/03_study.png\" width=\"200\" height=\"\">\n",
+    "\n",
     "### 5.5. Statistics View\n",
     "\n",
     "Statistics are displayed for individual decks and overall performance, showing:\n",
@@ -247,7 +422,20 @@
     "- Correct answers\n",
     "- Success rate\n",
     "\n",
-    "### 5.6. Help\n",
+    "#\n",
+    "<img src=\"images/04_statistics.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "### 5.6. Deck Manager View\n",
+    "\n",
+    "Allows Editing a Set of Cards.\n",
+    "\n",
+    "- Add Card\n",
+    "- Delete Card\n",
+    "- Edit Card\n",
+    "\n",
+    "<img src=\"images/05_editing.png\" width=\"200\" height=\"\">\n",
+    "\n",
+    "### 5.7. Help\n",
     "\n",
     "- Access application description (see image below)\n",
     "\n",
@@ -263,10 +451,7 @@
     "    This class manages the help screen of the application. It sets the default font to Roboto (if available), clears existing widgets from the parent frame, and creates a new layout with a header and a scrollable frame containing the help text. The help text is loaded from a file named help_text.txt and displayed using the SimpleMarkdownText class.\n",
     "\n",
     "\n"
-   ],
-   "metadata": {
-    "id": "v6NUXqXLW7dy"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,12 +496,12 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "include_colab_link": true,
+   "provenance": []
+  },
   "language_info": {
    "name": "python"
-  },
-  "colab": {
-   "provenance": [],
-   "include_colab_link": true
   }
  },
  "nbformat": 4,
